<resources>
    <string name="app_name">Bobby Ryan</string>
    <string name="username">Username</string>
    <string name="createusername">Create your Username</string>
    <string name="password">Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="province">Province</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="city">Kota</string>
    <string name="zipcode">Kode Pos</string>
    <string name="village">Jalan</string>
    <string name="createpassword">Create your Password</string>
    <string name="createPhoneNumber">Input your Phone Number</string>
    <string name="chooseProvince">Choose your Province</string>
    <string name="chooseKabupaten">Choose your District</string>
    <string name="chooseCity">Choose your City</string>
    <string name="chooseVillage">Choose your SubDistrict</string>
    <string name="chooseZipCode">Choose your Zip Code</string>
    <string name="createUsername">Create your Username</string>
    <string name="oldPassword">Input your Old Password</string>
    <string name="newPassword">Input your New Password</string>
    <string name="confirmNewPassword">Confirm your New Password</string>
    <string name="changePassword">Change Password</string>
</resources>