<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:gravity="center"
    tools:context=".Activity.ChangePasswordActivity">

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/shape_textbox"
        android:textColorHint="@color/white_grey"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:hint="@string/oldPassword"
        android:inputType="text" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/shape_textbox"
        android:textColorHint="@color/white_grey"
        android:layout_below="@+id/etOldPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:hint="@string/newPassword"
        android:inputType="text" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/shape_textbox"
        android:textColorHint="@color/white_grey"
        android:layout_below="@+id/etNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:hint="@string/confirmNewPassword"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_primary_color"
        android:backgroundTint="@color/blue_discord"
        android:layout_below="@+id/etConfirmNewPassword"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="10dp"
        android:text="@string/changePassword"
        android:id="@+id/btnChangePassword"/>



</RelativeLayout>
</layout>