<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_color"
    tools:context=".Activity.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Post A Picture"
        android:id="@+id/btn_post"
        android:backgroundTint="@color/blue_discord"
        android:textAllCaps="false"
        android:layout_below="@+id/rlProfile"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="match_parent"
        android:layout_below="@+id/ivProfile"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_profile"
        app:cardCornerRadius="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:padding="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_textbox">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/tvName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPhoneNumber"
                android:layout_below="@+id/tvName"
                android:textColor="@color/white"

                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="PhoneNumber"/>

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/white"

                android:layout_height="wrap_content"
                android:id="@+id/tvProvinsi"
                android:layout_below="@+id/tvPhoneNumber"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/province"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKabupaten"
                android:textColor="@color/white"

                android:layout_below="@+id/tvProvinsi"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/kabupaten"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKota"
                android:layout_below="@+id/tvKabupaten"
                android:textColor="@color/white"

                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/city"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvJalan"
                android:layout_below="@+id/tvKota"
                android:gravity="center"
                android:textColor="@color/white"

                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/village"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKodePos"
                android:layout_below="@+id/tvJalan"
                android:textColor="@color/white"

                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/zipcode"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_logout"
                android:textColor="@color/white"
                android:text="Log Out"
                android:backgroundTint="@color/blue_discord"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_below="@+id/tvKodePos"
                android:textAllCaps="false"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>



    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/ivProfile"
        app:civ_circle_background_color="@color/primary_color_variant"
        android:layout_marginBottom="-20dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:src="@drawable/logo_transparent_96x96"
        />

</RelativeLayout>